Unseeded_region_growing.ipynb weitergemacht

--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
@@ -32,15 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 141,
    "outputs": [],
    "source": [
     "# Region Array\n",
     "# List with neighbours\n",
     "Ne_total = []\n",
     "regions = np.zeros(img_r.shape) # array with region number\n",
-    "regions[0,0] = 1 # Startpixel is region number 1\n",
-    "regions[1,1] = 2"
+    "regions[0,0] = 1 # Startpixel is region number 1"
    ],
    "metadata": {
     "collapsed": false,
@@ -51,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 142,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 0), (0, 1), (0, 1), (2, 1), (1, 0), (1, 2)]\n"
+      "[(1, 0), (0, 1)]\n"
      ]
     }
    ],
@@ -97,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 143,
    "outputs": [
     {
      "data": {
-      "text/plain": "[0.0, 0.0]"
+      "text/plain": "[0.0]"
      },
-     "execution_count": 57,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,16 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 1), (0, 0), (0, 2)]\n"
-     ]
-    }
-   ],
+   "execution_count": 144,
+   "outputs": [],
    "source": [
     "# Name kann geändert werden, wenn alle Funktionen das gleiche machen\n",
     "def unseeded_add_neighbors(img, p): #p describes pixel for which neighbors need to be added\n",
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 145,
    "outputs": [],
    "source": [
     "def unseeded_distance(img, list, regions): # img intensity values, regions is region number, list is list of neighbours\n",
@@ -198,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 146,
    "outputs": [
     {
      "name": "stdout",
@@ -231,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 147,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[[1. 1. 0. ... 0. 0. 0.]\n",
-      " [0. 2. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
       " ...\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
@@ -270,7 +261,7 @@
     "\n",
     "test = unseeded_region_direct(img_r, regions, distance, pick)\n",
     "\n",
-    "print(test)\n"
+    "print(test)"
    ],
    "metadata": {
     "collapsed": false,
@@ -281,7 +272,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 148,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zu nächst ähnlicher Region zuweisen\\n\",\n",
+    "# Distanz zu allen Regionen ausrechnene und zu der mit der kleinsten Distanz zuweisen\\n\",\n",
+    "def unseeded_region_indirect_or_new(img, regions, pick):\n",
+    "    if distance[pick] >= t: # Distanz zu den direkten Nachbarn ist zu groß\n",
+    "        means = mean_region(img, regions)  # Mittelwerte Regionen\n",
+    "        dis = []\n",
+    "        for m in means:\n",
+    "            dis.append(abs(img[pick] - m)) # Alle Abstände zu den Regionen berechnen\n",
+    "        minimum = min(dis) # Minimale Distanz\n",
+    "        if minimum < t: # Distanz muss kleiner sein als der Threshold\n",
+    "            for d in range(0, len(dis)): # Für alle Distanz Werte wir überprüft\n",
+    "                   if dis[d] == minimum: # Wenn die Distanz gleich dem Minimum ist\n",
+    "                        regions[pick] = d + 1 # Letzte Region mit minimalem Wert\n",
+    "            else:# Definition einer neuen Region, wenn keine passende gefunden wurde\n",
+    "               region_max = int(max(regions.flatten())) # Aktuell höchste Regionsnummer\n",
+    "               regions[pick] = region_max + 1 # Neuer Regionswert für Pixel pick\n",
+    "    return regions\n",
+    "\n",
+    "test3 = unseeded_region_indirect_or_new(img_r, regions, pick)\n",
+    "print(test3)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "outputs": [],
    "source": [
     "# Region A1 festlegen, Liste für alle vorhandenen Regionen erstellen (Listen Ai)\n",
@@ -323,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 149,
    "outputs": [],
    "source": [],
    "metadata": {
