Unseeded_region_growing.ipynb weitergemacht

--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Region Array\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -65,21 +65,21 @@
     "    Ne = []\n",
     "    for p in np.ndindex(img.shape):\n",
     "        if regions[p] != 0: # Pixels with region\n",
-    "            if p[0] > 0: # Add neighbours to list T, left\n",
+    "            if p[0] > 0: # Add neighbours to list T, up\n",
     "                a = (p[0]-1, p[1])\n",
-    "                if regions[a] == 0:\n",
+    "                if regions[a] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(a)\n",
-    "            if p[0] < img.shape[0]: # Add neighbours to list T, right\n",
+    "            if p[0] < img.shape[0]: # Add neighbours to list T, down\n",
     "                b = (p[0]+1, p[1])\n",
-    "                if regions[b] == 0:\n",
+    "                if regions[b] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(b)\n",
-    "            if p[1] > 0: # Add neighbours to list T, up\n",
+    "            if p[1] > 0: # Add neighbours to list T, left\n",
     "                c = (p[0], p[1]-1)\n",
-    "                if regions[c] == 0:\n",
+    "                if regions[c] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(c)\n",
-    "            if p[1] < img.shape[1]: # Add neighbours to list T, down\n",
+    "            if p[1] < img.shape[1]: # Add neighbours to list T, right\n",
     "                d = (p[0], p[1]+1)\n",
-    "                if regions[d] == 0:\n",
+    "                if regions[d] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(d)\n",
     "    return Ne\n",
     "\n",
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "[0.0]"
      },
-     "execution_count": 143,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,22 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Name kann geändert werden, wenn alle Funktionen das gleiche machen\n",
     "def unseeded_add_neighbors(img, p): #p describes pixel for which neighbors need to be added\n",
     "    Ne1 = []\n",
-    "    if p[0] > 0: # Add neighbours to list T, left\n",
+    "    if p[0] > 0: # Add neighbours to list T, up\n",
     "        a = (p[0]-1, p[1])\n",
     "        Ne1.append(a)\n",
-    "    if p[0] < img.shape[0]: # Add neighbours to list T, right\n",
+    "    if p[0] < img.shape[0]: # Add neighbours to list T, down\n",
     "        b = (p[0]+1, p[1])\n",
     "        Ne1.append(b)\n",
-    "    if p[1] > 0: # Add neighbours to list T, up\n",
+    "    if p[1] > 0: # Add neighbours to list T, left\n",
     "        c = (p[0], p[1]-1)\n",
     "        Ne1.append(c)\n",
-    "    if p[1] < img.shape[1]: # Add neighbours to list T, down\n",
+    "    if p[1] < img.shape[1]: # Add neighbours to list T, right\n",
     "        d = (p[0], p[1]+1)\n",
     "        Ne1.append(d)\n",
     "    return Ne1"
@@ -162,20 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def unseeded_distance(img, list, regions): # img intensity values, regions is region number, list is list of neighbours\n",
     "    means = mean_region(img, regions)\n",
     "    result = np.full(img.shape, 500) # Wert 500 damit berechnete Distanzen immer kleiner sind\n",
     "    for i in list:\n",
-    "        nei = unseeded_add_neighbors(img, i)\n",
+    "        nei = unseeded_add_neighbors(img, i) # Nachbarn des Pixels\n",
     "        distance = []\n",
     "        for j in nei:\n",
-    "            if regions[j] != 0:\n",
-    "                distance.append(abs(img[i] - means[int(regions[j] - 1)]))\n",
+    "            if regions[j] != 0: # Nachbarn mit zugeordneter Region\n",
+    "                distance.append(abs(img[i] - means[int(regions[j] - 1)])) # Distanz Berechnung\n",
     "        if len(distance) != 0:\n",
-    "            result[i] = min(distance)\n",
+    "            result[i] = min(distance) # Minimale Distanz wird in den array geschrieben\n",
     "    return result\n",
     "\n",
     "distance = unseeded_distance(img_r, Ne_total, regions)"
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -245,18 +245,18 @@
     "def unseeded_region_direct(img, regions, distance, pick): # pick ist ausgesuchter Pixel\n",
     "    if distance[pick] < t:\n",
     "        means = mean_region(img, regions)\n",
-    "        nei = unseeded_add_neighbors(img, pick)\n",
+    "        nei = unseeded_add_neighbors(img, pick) # Nachbarn des Pixels\n",
     "        dis = []\n",
     "        for j in nei: # Distanz für Nachbarn wird wieder bestimmt\n",
-    "            if regions[j] != 0:\n",
-    "                dis.append(abs(img[pick] - means[int(regions[j] - 1)]))\n",
-    "            else:\n",
+    "            if regions[j] != 0: # Nachbarn mit zugeordneter Region\n",
+    "                dis.append(abs(img[pick] - means[int(regions[j] - 1)])) # Distanz Berechnung\n",
+    "            else: # Hohe Werte um die Reihenfolge der Liste zu erhalten\n",
     "                dis.append(500)\n",
-    "        minimum = min(dis)\n",
+    "        minimum = min(dis) # Minimale Distanz\n",
     "        for d in range(0, len(dis)):\n",
-    "            if dis[d] == minimum:\n",
+    "            if dis[d] == minimum: # Bestimmt Region mit niedrigster Distanz\n",
     "                region_nei = nei[d] # nimmt den letzten Regionswert\n",
-    "        regions[pick] = regions[region_nei] # Regionswert vom nähsten Pixel wird übernommen\n",
+    "                regions[pick] = regions[region_nei] # Regionswert vom nähsten Pixel wird übernommen\n",
     "    return regions\n",
     "\n",
     "test = unseeded_region_direct(img_r, regions, distance, pick)\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -318,56 +318,42 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 149,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Region A1 festlegen, Liste für alle vorhandenen Regionen erstellen (Listen Ai)\n",
+    "Region A1 festlegen, Liste für alle vorhandenen Regionen erstellen (Listen Ai)\n",
     "\n",
-    "# Nachbarn bestimmen (Liste Ne)\n",
+    "Nachbarn bestimmen (Liste Ne)\n",
     "\n",
-    "# Liste Ne erstellen, die alle Pixel enthält die an gefundene Regionen grenzen\n",
+    "Liste Ne erstellen, die alle Pixel enthält die an gefundene Regionen grenzen\n",
     "\n",
-    "# Pixel x aus Liste Ne_total auswählen\n",
+    "Pixel x aus Liste Ne_total auswählen\n",
     "\n",
-    "# Liste N(x) sind die direkten Nachbarn von Pixel x\n",
+    "Liste N(x) sind die direkten Nachbarn von Pixel x\n",
     "\n",
-    "# Difference measure: Formel 1 Paper, Differenz Intensität Pixel x zu der Durchschnitts-Intensität der Region Ai\n",
-    "# Pixel x und Ai müssen aneinander angrenzen\n",
+    "Difference measure: Formel 1 Paper, Differenz Intensität Pixel x zu der Durchschnitts-Intensität der Region Ai\n",
+    "Pixel x und Ai müssen aneinander angrenzen\n",
     "\n",
-    "# Differenz von allen Pixeln in Liste Ne_total zu allen deren angrenzenden Regionen berechnen\n",
-    "# Pixel mit kleinstem Wert wird zu Pixel z\n",
+    "Differenz von allen Pixeln in Liste Ne_total zu allen deren angrenzenden Regionen berechnen\n",
+    "Pixel mit kleinstem Wert wird zu Pixel z\n",
     "\n",
-    "# Differenz von z zu Ai wird mit einem treshold t (wie bestimmen) verglichen\n",
-    "# Wenn kleienr als t, z wird zu Region hinzugefügt\n",
+    "Differenz von z zu Ai wird mit einem treshold t (wie bestimmen) verglichen\n",
+    "Wenn kleienr als t, z wird zu Region hinzugefügt\n",
     "\n",
-    "# Wenn größer, suchen wie die ähnlichste Region, egal ob angrenzend oder nicht\n",
-    "# Vergleich der minimalen Differenz mit treshold t, wenn kleiner wird z dieser Region zugewiesen\n",
+    "Wenn größer, suchen wie die ähnlichste Region, egal ob angrenzend oder nicht\n",
+    "Vergleich der minimalen Differenz mit treshold t, wenn kleiner wird z dieser Region zugewiesen\n",
     "\n",
-    "# Wenn größer, Pixel z wir eine neue Region\n",
+    "Wenn größer, Pixel z wir eine neue Region\n",
     "\n",
-    "# Aktualisierung Listen Ai\n",
+    "Aktualisierung Listen Ai\n",
     "\n",
-    "# Nachbarn bestimmen, Liste T ...\n",
+    "Nachbarn bestimmen, Liste T ...\n",
     "\n",
-    "# Verschnellerung: Nur die Differenzen neu berechnen der erweiterten Region"
+    "Verschnellerung: Nur die Differenzen neu berechnen der erweiterten Region\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
