unseeded kleine Änderungen

--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -69,7 +69,7 @@
     "                a = (p[0]-1, p[1])\n",
     "                if regions[a] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(a)\n",
-    "            if p[0] < img.shape[0]: # Add neighbours to list T, down\n",
+    "            if p[0] < img.shape[0] - 1: # Add neighbours to list T, down\n",
     "                b = (p[0]+1, p[1])\n",
     "                if regions[b] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(b)\n",
@@ -77,7 +77,7 @@
     "                c = (p[0], p[1]-1)\n",
     "                if regions[c] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(c)\n",
-    "            if p[1] < img.shape[1]: # Add neighbours to list T, right\n",
+    "            if p[1] < img.shape[1] - 1: # Add neighbours to list T, right\n",
     "                d = (p[0], p[1]+1)\n",
     "                if regions[d] == 0: # Nachbar darf noch keine Region haben\n",
     "                    Ne.append(d)\n",
@@ -289,8 +289,8 @@
     }
    ],
    "source": [
-    "# Zu nächst ähnlicher Region zuweisen\\n\",\n",
-    "# Distanz zu allen Regionen ausrechnene und zu der mit der kleinsten Distanz zuweisen\\n\",\n",
+    "# Zu nächst ähnlicher Region zuweisen\n",
+    "# Distanz zu allen Regionen ausrechnene und zu der mit der kleinsten Distanz zuweisen\n",
     "def unseeded_region_indirect_or_new(img, regions, pick):\n",
     "    if distance[pick] >= t: # Distanz zu den direkten Nachbarn ist zu groß\n",
     "        means = mean_region(img, regions)  # Mittelwerte Regionen\n",
