--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "def calculation_distance(img, Ne, regions): # img intensity values, regions is region number, Ne is list of neighbours\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "#updates distances for updated region\n",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "def label(regions, distances, nearest_reg): # regions is array of region numbers, distances is array of distances, nearest_reg is array of nearest region number\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "def region_growing(img, regions):\n",
@@ -522,6 +522,49 @@
     "img_result = seed_merging(img_result)\n",
     "img_result = decrease_region_number(img_result, 50)\n",
     "f.show_image(img_result, 15, 8)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\marie\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 100 is out of bounds for axis 1 with size 100",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-24-bb4761feb2ab>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mNe\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mfind_neighbors\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_result\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#list of all adjacent pixels\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mdist\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcalculation_distance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_s\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mNe\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg_result\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#array of smallest distances\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mregions_new\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlabel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_result\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#labels pixel with smallest distance\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mNe_add\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0madd_neighbors\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_s\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#finds neighbors of newly labeled pixel\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;32mfor\u001B[0m \u001B[0mj\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mNe_add\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m#updates list of adjacent pixels\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-18-0d5ad0b7bf11>\u001B[0m in \u001B[0;36mcalculation_distance\u001B[1;34m(img, Ne, regions)\u001B[0m\n\u001B[0;32m      8\u001B[0m         \u001B[0mregion_number\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m[\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      9\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0mj\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mnei\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 10\u001B[1;33m             \u001B[1;32mif\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mj\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m!=\u001B[0m \u001B[1;36m0\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# only neighboring pixels which are sorted\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     11\u001B[0m                 \u001B[0mdistance\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mabs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mj\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mmeans\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mregions\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mj\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m/\u001B[0m \u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mj\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# saves tuple of normalized distance of pixel to neighbor j and region of j\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     12\u001B[0m                 \u001B[0mregion_number\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mregions\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mj\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mIndexError\u001B[0m: index 100 is out of bounds for axis 1 with size 100"
+     ]
+    }
+   ],
+   "source": [
+    "Ne = find_neighbors(img_result) #list of all adjacent pixels\n",
+    "dist = calculation_distance(img_s, Ne, img_result) #array of smallest distances\n",
+    "regions_new = label(img_result, dist[0], dist[1]) #labels pixel with smallest distance\n",
+    "Ne_add = add_neighbors(img_s, regions_new[1]) #finds neighbors of newly labeled pixel\n",
+    "for j in Ne_add: #updates list of adjacent pixels\n",
+    "    if j not in Ne:\n",
+    "        Ne.append(j)\n",
+    "\n",
+    "f.show_image(img_result,15,8)"
    ],
    "metadata": {
     "collapsed": false,
