--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def seed_merging(img):\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "#reduce number of starting regions for region growing by only considering starting regions with more than T seeds\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def find_neighbors(regions):\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def add_neighbors(img, p): #p describes pixel for which neighbors need to be added\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def mean_region(img, regions): #img is array of intensity values, regions is array with region numbers\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# calculated mean value of region of newly labeled pixel\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def calculation_distance(img, Ne, regions): # img intensity values, regions is region number, Ne is list of neighbours\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "#updates distances for updated region\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "def label(regions, distances, nearest_reg, Ne): # regions is array of region numbers, distances is array of distances, nearest_reg is array of nearest region number\n",
@@ -452,11 +452,12 @@
     "    pos_min_dist = list(zip(x[0], x[1]))[0] # position of first pixel with minimal distance value\n",
     "    pos_min_dist = (int(pos_min_dist[0]), int(pos_min_dist[1])) #converting to int for finding in list\n",
     "    regions[pos_min_dist] = nearest_reg[pos_min_dist]\n",
-    "    #print(pos_min_dist)\n",
-    "    #print(Ne)\n",
+    "    print(pos_min_dist)\n",
+    "    print(Ne)\n",
     "    Ne.remove(pos_min_dist) #removes newly labeled entry from list Ne\n",
-    "    #print(len(Ne))\n",
-    "    return regions, pos_min_dist, Ne # returns new labeled region array and position of newly labeled pixel"
+    "    distances[pos_min_dist] = 1\n",
+    "    print(len(Ne))\n",
+    "    return regions, pos_min_dist, Ne, distances # returns new labeled region array and position of newly labeled pixel"
    ],
    "metadata": {
     "collapsed": false,
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "def region_growing(img, regions):\n",
@@ -475,6 +476,7 @@
     "    dist = calculation_distance(img, Ne, regions) #array of smallest distances\n",
     "    regions_new = label(regions, dist[0], dist[1], Ne) #labels pixel with smallest distance\n",
     "    Ne = regions_new[2]\n",
+    "    dist = regions_new[3]\n",
     "    Ne_add = add_neighbors(img, regions_new[1]) #finds neighbors of newly labeled pixel\n",
     "    for j in Ne_add: #updates list of adjacent pixels\n",
     "        if j not in Ne and regions[j] != 0:\n",
@@ -483,6 +485,7 @@
     "        dist = new_distance(img, regions_new[0], dist[1], dist[0], regions_new[1], Ne) #updates distances\n",
     "        regions_new = label(regions_new[0], dist[0], dist[1], Ne) #labels next pixel\n",
     "        Ne = regions_new[2]\n",
+    "        dist = regions_new[3]\n",
     "        Ne_add = add_neighbors(img, regions_new[1]) #finds neighbors of newly labeled pixel\n",
     "        for j in Ne_add: #updates Ne\n",
     "            if j not in Ne and regions[j] != 0:\n",
@@ -654,12 +657,6 @@
     }
    ],
    "source": [
-    "l=[(0,0), (1,1)]\n",
-    "element = (0,0)\n",
-    "l.remove(element)\n",
-    "print(l)\n",
-    "\n",
-    "\n",
     "#img_result = region_growing(img_s, img_result)\n",
     "#f.show_image(img_result, 15, 8)\n"
    ],
@@ -672,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stderr",
@@ -757,18 +754,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 3)\n",
-      "[(0, 0), (0, 2), (2, 1), (1, 0), (1, 2), (1, 4), (2, 3), (2, 5), (3, 3), (3, 5), (4, 3), (4, 6), (6, 4), (5, 3), (6, 5), (5, 6)]\n",
-      "15\n",
-      "(2, 3)\n",
-      "[(0, 0), (0, 2), (2, 1), (1, 0), (1, 2), (1, 4), (2, 3), (2, 5), (3, 5), (4, 3), (4, 6), (6, 4), (5, 3), (6, 5), (5, 6), (3, 4)]\n",
-      "15\n"
+      "(5, 6)\n",
+      "[(0, 0), (0, 2), (2, 1), (1, 0), (1, 2), (1, 3), (2, 2), (1, 4), (1, 5), (1, 6), (2, 7), (3, 1), (3, 8), (4, 1), (5, 6), (5, 7), (4, 8), (6, 2), (5, 1), (6, 3), (6, 4), (6, 5)]\n",
+      "21\n",
+      "(4, 6)\n",
+      "[(0, 0), (0, 2), (2, 1), (1, 0), (1, 2), (1, 3), (2, 2), (1, 4), (1, 5), (1, 6), (2, 7), (3, 1), (3, 8), (4, 1), (5, 7), (4, 8), (6, 2), (5, 1), (6, 3), (6, 4), (6, 5), (4, 6), (5, 5)]\n",
+      "22\n"
      ]
     },
     {
@@ -809,17 +806,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 7)\n",
-      "[(0, 0), (0, 2), (2, 1), (1, 0), (1, 2), (1, 3), (2, 2), (1, 4), (1, 5), (1, 6), (2, 7), (4, 2), (3, 1), (4, 3), (4, 6), (3, 7), (6, 4), (5, 3), (6, 5), (5, 6)]\n",
-      "19\n",
-      "(3, 7)\n",
-      "[(0, 0), (0, 2), (2, 1), (1, 0), (1, 2), (1, 3), (2, 2), (1, 4), (1, 5), (1, 6), (2, 7), (4, 2), (3, 1), (4, 3), (4, 6), (6, 4), (5, 3), (6, 5), (5, 6), (3, 6)]\n"
+      "(6, 7)\n",
+      "[(0, 0), (0, 2), (2, 1), (1, 0), (1, 2), (1, 3), (2, 2), (1, 4), (1, 5), (1, 6), (2, 7), (3, 1), (3, 8), (4, 1), (4, 8), (5, 1), (6, 7), (5, 8), (7, 2), (6, 1), (7, 3), (7, 4), (7, 5), (7, 6)]\n",
+      "23\n"
      ]
     },
     {
@@ -833,16 +828,16 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-37-aaae127f1b50>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mimg_t\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mregion_growing\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_n\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg_t\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshow_image\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_t\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m15\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m8\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m<ipython-input-33-fdcf51d80ff5>\u001B[0m in \u001B[0;36mregion_growing\u001B[1;34m(img, regions)\u001B[0m\n\u001B[0;32m     10\u001B[0m     \u001B[1;32mwhile\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m>\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m#as long as not all pixels are sorted\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m         \u001B[0mdist\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnew_distance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#updates distances\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 12\u001B[1;33m         \u001B[0mregions_new\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlabel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#labels next pixel\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     13\u001B[0m         \u001B[0mNe\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     14\u001B[0m         \u001B[0mNe_add\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0madd_neighbors\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#finds neighbors of newly labeled pixel\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m<ipython-input-31-dde2d81845e5>\u001B[0m in \u001B[0;36mlabel\u001B[1;34m(regions, distances, nearest_reg, Ne)\u001B[0m\n\u001B[0;32m      6\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpos_min_dist\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      7\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 8\u001B[1;33m     \u001B[0mNe\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mremove\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpos_min_dist\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#removes newly labeled entry from list Ne\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      9\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     10\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpos_min_dist\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mNe\u001B[0m \u001B[1;31m# returns new labeled region array and position of newly labeled pixel\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mValueError\u001B[0m: list.remove(x): x not in list"
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-48-aaae127f1b50>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mimg_t\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mregion_growing\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_n\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg_t\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshow_image\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_t\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m15\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m8\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-45-307f55232e05>\u001B[0m in \u001B[0;36mregion_growing\u001B[1;34m(img, regions)\u001B[0m\n\u001B[0;32m     10\u001B[0m             \u001B[0mNe\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mj\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m     \u001B[1;32mwhile\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m>\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m#as long as not all pixels are sorted\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 12\u001B[1;33m         \u001B[0mdist\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnew_distance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#updates distances\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     13\u001B[0m         \u001B[0mregions_new\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlabel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mNe\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#labels next pixel\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     14\u001B[0m         \u001B[0mNe\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mregions_new\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-11-58d35fc7bf29>\u001B[0m in \u001B[0;36mnew_distance\u001B[1;34m(img, regions, nearest_reg, distances, new_pixel, Ne)\u001B[0m\n\u001B[0;32m     18\u001B[0m                 \u001B[1;31m# only calculates new distances once\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     19\u001B[0m                 \u001B[0mpos_min_dist\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdistance\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mindex\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmin_dist\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 20\u001B[1;33m                 \u001B[0mnearest_reg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mi\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mregion_number\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpos_min_dist\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;31m# saves number of nearest region # saves number of nearest region\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     21\u001B[0m                 \u001B[0mdistances\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mi\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmin_dist\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     22\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mdistances\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mnearest_reg\u001B[0m  \u001B[1;31m# returns array with distance values between 0 and 1 and array with number of nearest region\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mIndexError\u001B[0m: too many indices for array"
      ]
     }
    ],
