--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -162,8 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 0)\n",
+      "(0, 1)\n",
+      "[[500   0 500 ... 500 500 500]\n",
+      " [  0 500 500 ... 500 500 500]\n",
+      " [500 500 500 ... 500 500 500]\n",
+      " ...\n",
+      " [500 500 500 ... 500 500 500]\n",
+      " [500 500 500 ... 500 500 500]\n",
+      " [500 500 500 ... 500 500 500]]\n"
+     ]
+    }
+   ],
    "source": [
     "def unseeded_distance(img, list, regions): # img intensity values, regions is region number, list is list of neighbours\n",
     "    means = unseeded_mean_region(img, regions)\n",
@@ -178,7 +194,8 @@
     "            result[i] = min(distance) # Minimale Distanz wird in den array geschrieben\n",
     "    return result\n",
     "\n",
-    "distance = unseeded_distance(img_r, Ne_total, regions)"
+    "distance = unseeded_distance(img_r, Ne_total, regions)\n",
+    "print(distance)"
    ],
    "metadata": {
     "collapsed": false,
@@ -274,16 +291,15 @@
    "execution_count": 9,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 1. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-9-e85b51d46450>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     16\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 18\u001B[1;33m \u001B[0mtest3\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0munseeded_region_indirect_or_new\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_r\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpick\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdistance\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     19\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtest3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     20\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-9-e85b51d46450>\u001B[0m in \u001B[0;36munseeded_region_indirect_or_new\u001B[1;34m(img, regions, pick, t)\u001B[0m\n\u001B[0;32m      7\u001B[0m         \u001B[0mdis\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mabs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mpick\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mm\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# Alle Abstände zu den Regionen berechnen\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m     \u001B[0mminimum\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# Minimale Distanz\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 9\u001B[1;33m     \u001B[1;32mif\u001B[0m \u001B[0mminimum\u001B[0m \u001B[1;33m<\u001B[0m \u001B[0mt\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# Distanz muss kleiner sein als der Threshold\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     10\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0md\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# Für alle Distanz Werte wir überprüft\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m                \u001B[1;32mif\u001B[0m \u001B[0mdis\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0md\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mminimum\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# Wenn die Distanz gleich dem Minimum ist\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mValueError\u001B[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
    ],
