shorter mean method without for loop

--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -16,15 +16,6 @@
      "text": [
       "Using matplotlib backend: Qt5Agg\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\L\\anaconda3\\lib\\site-packages\\IPython\\core\\magics\\pylab.py:159: UserWarning: pylab import has clobbered these variables: ['f']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n",
-      "  warn(\"pylab import has clobbered these variables: %s\"  % clobbered +\n"
      ]
     }
    ],
@@ -292,6 +283,62 @@
     "            intensity.append(img[p]) #iterates over every pixel in the image and appends intensity value, if it is in the region\n",
     "    single_mean = np.mean(intensity) #calculates mean value of region with new pixel\n",
     "    return single_mean #returns mean value of changed region"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# calculated mean value of region of newly labeled pixel\n",
+    "def one_region_mean2(img, regions, new_pixel): #img is array of intensity values, regions is array with region numbers, new_pixel is position of last added pixel\n",
+    "    intensity = []\n",
+    "    pos_new_reg = np.where(regions == new_pixel)\n",
+    "    pos_new_reg = list(zip(pos_new_reg[0], pos_new_reg[1]))\n",
+    "    single_mean = np.mean(img[pos_new_reg])\n",
+    "    return single_mean #returns mean value of changed region"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\marie\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.zeros((3,3))\n",
+    "y[(0,1)] = 1\n",
+    "y[(1,1)] = 1\n",
+    "pos = np.where(y==1)\n",
+    "pos = list(zip(pos[0], pos[1]))\n",
+    "a = y[pos]\n",
+    "print(a)\n"
    ],
    "metadata": {
     "collapsed": false,
