Small changes unseeded

--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -162,14 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 0)\n",
-      "(0, 1)\n",
       "[[500   0 500 ... 500 500 500]\n",
       " [  0 500 500 ... 500 500 500]\n",
       " [500 500 500 ... 500 500 500]\n",
@@ -218,7 +216,7 @@
    ],
    "source": [
     "# z Aussuchen\n",
-    "def unseeded_pixle_pick(distance): # distance ist Ergebnis von unseeded_distance, array mit Distanzen\n",
+    "def unseeded_pixel_pick(distance): # distance ist Ergebnis von unseeded_distance, array mit Distanzen\n",
     "    pick = []\n",
     "    min = np.amin(distance) # Minimale Distanz\n",
     "    for p in np.ndindex(distance.shape): # alle Pixel checken\n",
@@ -227,7 +225,7 @@
     "        if len(pick) > 0:\n",
     "            return pick[0] # Erster Pixel wird ausgewählt (haben wir willkürlich festgelegt)\n",
     "\n",
-    "pick = unseeded_pixle_pick(distance)\n",
+    "pick = unseeded_pixel_pick(distance)\n",
     "print(pick)"
    ],
    "metadata": {
@@ -263,16 +261,15 @@
     "    means = unseeded_mean_region(img, regions)\n",
     "    nei = unseeded_add_neighbors(img, pick) # Nachbarn des Pixels\n",
     "    dis = []\n",
+    "    region_number = []\n",
     "    for j in nei: # Distanz für Nachbarn wird wieder bestimmt\n",
     "        if regions[j] != 0: # Nachbarn mit zugeordneter Region\n",
     "            dis.append(abs(img[pick] - means[int(regions[j] - 1)])) # Distanz Berechnung\n",
-    "        else: # Hohe Werte um die Reihenfolge der Liste zu erhalten\n",
-    "            dis.append(500)\n",
+    "            region_number.append(regions[j])\n",
     "    minimum = min(dis) # Minimale Distanz\n",
     "    for d in range(0, len(dis)):\n",
     "        if dis[d] == minimum: # Bestimmt Region mit niedrigster Distanz\n",
-    "            region_nei = nei[d] # nimmt den letzten Regionswert\n",
-    "            regions[pick] = regions[region_nei] # Regionswert vom nähsten Pixel wird übernommen\n",
+    "            regions[pick] = region_number[d] # Regionswert vom nähsten Pixel wird übernommen\n",
     "    return regions\n",
     "\n",
     "test = unseeded_region_direct(img_r, regions, pick)\n",
