--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -341,14 +341,15 @@
     }
    ],
    "source": [
-    "#y = np.zeros((3,3))\n",
-    "#y[(0,1)] = 1\n",
-    "#y[(1,1)] = 1\n",
-    "#y[(2,2)] = 1\n",
-    "#pos = np.where(y==1)\n",
-    "#rows = pos[0]\n",
-    "#cols = pos[1]\n",
-    "#pos = list(zip(pos[0], pos[1]))\n",
+    "y = np.zeros((3,3))\n",
+    "y[(0,1)] = 1\n",
+    "y[(1,1)] = 1\n",
+    "y[(2,2)] = 1\n",
+    "pos = np.where(y==1)\n",
+    "rows = pos[0]\n",
+    "cols = pos[1]\n",
+    "pos = list(zip(pos[0], pos[1]))\n",
+    "print(pos[1][0])\n",
     "#a = y[rows,cols]\n",
     "#print(a)\n",
     "#print(pos)"
