Änderungen in der Benennung von Definitionen und Variablen

--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -43,7 +43,6 @@
     "%pylab\n",
     "%matplotlib inline\n",
     "\n",
-    "from Functions import functions as f\n",
     "from Functions import image_processing as ip\n",
     "import skimage.io as sk\n",
     "from collections import Counter\n"
@@ -805,11 +804,11 @@
    ],
    "source": [
     "img_small = img[300:350, 400:450]\n",
-    "f.show_image(img_small, 15, 8)\n",
+    "ip.show_image(img_small, 15, 8)\n",
     "img_r = seeds(img_small, 0.1, 1)\n",
-    "f.show_image(img_r, 15, 8)\n",
+    "ip.show_image(img_r, 15, 8)\n",
     "img_r = seed_merging(img_r)\n",
-    "f.show_image(img_r, 15, 8)"
+    "ip.show_image(img_r, 15, 8)"
    ],
    "metadata": {
     "collapsed": false,
@@ -8043,7 +8042,7 @@
    ],
    "source": [
     "img_r = region_growing(img_small, img_r)\n",
-    "f.show_image(img_r, 15, 8)\n",
+    "ip.show_image(img_r, 15, 8)\n",
     "\n",
     "\n",
     "\n",
