Änderungen bei unseeded fertig

--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "from Functions import image_processing as ip\n",
     "from Functions import seed_detection as sd\n",
+    "from Functions import seeded_region_growing as srg\n",
     "import skimage.io as sk\n",
     "from collections import Counter"
    ]
@@ -228,35 +229,7 @@
    "outputs": [],
    "source": [
     "#neighbors = find_neighbors(test3)\n",
-    "#print(neighbors)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "outputs": [],
-   "source": [
-    "def add_neighbors(img, p): #p describes pixel for which neighbors need to be added\n",
-    "    Ne1 = []\n",
-    "    if p[0] > 0: # Add neighbours to list T, up\n",
-    "        a = (p[0]-1, p[1])\n",
-    "        Ne1.append(a)\n",
-    "    if p[0] < img.shape[0]-1: # Add neighbours to list T, down\n",
-    "        b = (p[0]+1, p[1])\n",
-    "        Ne1.append(b)\n",
-    "    if p[1] > 0: # Add neighbours to list T, left\n",
-    "        c = (p[0], p[1]-1)\n",
-    "        Ne1.append(c)\n",
-    "    if p[1] < img.shape[1]-1: # Add neighbours to list T, right\n",
-    "        d = (p[0], p[1]+1)\n",
-    "        Ne1.append(d)\n",
-    "    return Ne1  #returns list of all existing direct neighbors (maximum 4 pixels)"
+    "#print(neighbors)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -415,7 +388,7 @@
     "    result = np.ones(img.shape) # new array with distance values, standard value is one\n",
     "    nearest_reg = np.zeros(img.shape)\n",
     "    for i in Ne:\n",
-    "        nei = add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
+    "        nei = srg.add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
     "        distance = []\n",
     "        region_number = []\n",
     "        for j in nei:\n",
@@ -450,7 +423,7 @@
     "    result = np.ones(img.shape) # new array with distance values, standard value is one\n",
     "    nearest_reg = np.zeros(img.shape)\n",
     "    for i in Ne:\n",
-    "        nei = add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
+    "        nei = srg.add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
     "        distance = []\n",
     "        region_number = []\n",
     "        for j in nei:\n",
@@ -484,7 +457,7 @@
     "    means[int(regions[new_pixel] -1)] = new_mean # list of all mean values of the region with the updated region\n",
     "    max_intensity = np.amax(img)\n",
     "    for i in Ne:\n",
-    "        nei = add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
+    "        nei = srg.add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
     "        distance = []\n",
     "        region_number = []\n",
     "        counter = 0\n",
@@ -523,7 +496,7 @@
     "    pos_new_reg = list(zip(pos_new_reg[0], pos_new_reg[1]))\n",
     "    nei_region = find_neighbors2(pos_new_reg, regions)\n",
     "    for i in nei_region:\n",
-    "        nei = add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
+    "        nei = srg.add_neighbors(img, i) # list 4 neighbors of pixel i out of unsorted neighbors list\n",
     "        distance = []\n",
     "        region_number = []\n",
     "        for j in nei:\n",
@@ -583,7 +556,7 @@
     "    regions_new = label(regions, dist[0], dist[1], Ne) #labels pixel with smallest distance\n",
     "    Ne = regions_new[2]\n",
     "    distances = regions_new[3]\n",
-    "    Ne_add = add_neighbors(img, regions_new[1]) #finds neighbors of newly labeled pixel\n",
+    "    Ne_add = srg.add_neighbors(img, regions_new[1]) #finds neighbors of newly labeled pixel\n",
     "    for j in Ne_add: #updates list of adjacent pixels\n",
     "        if j not in Ne and regions[j] == 0:\n",
     "            Ne.append(j)\n",
@@ -592,7 +565,7 @@
     "        regions_new = label(regions_new[0], dist[0], dist[1], Ne) #labels next pixel\n",
     "        Ne = regions_new[2]\n",
     "        distances = regions_new[3]\n",
-    "        Ne_add = add_neighbors(img, regions_new[1]) #finds neighbors of newly labeled pixel\n",
+    "        Ne_add = srg.add_neighbors(img, regions_new[1]) #finds neighbors of newly labeled pixel\n",
     "        for j in Ne_add: #updates Ne\n",
     "            if j not in Ne and regions[j] == 0:\n",
     "                Ne.append(j)\n",
