Unseeded Region Growing

--- a/Doodles/Unused_ideas.ipynb
+++ b/Doodles/Unused_ideas.ipynb
@@ -290,7 +290,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis = [2, 1, 6, 4, 1, 3]\n",
+    "minimum = min(dis)\n",
+    "print(minimum)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
