--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Region Array\n",
     "\n",
-    "regions = np.zeros(img_r.shape) # array with region number\n",
+    "regions = np.zeros(img_r.shape, int) # array with region number\n",
     "regions[0,0] = 1 # Startpixel is region number 1"
    ],
    "metadata": {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -112,7 +112,14 @@
       " ...\n",
       " [500 500 500 ... 500 500 500]\n",
       " [500 500 500 ... 500 500 500]\n",
-      " [500 500 500 ... 500 500 500]]\n"
+      " [500 500 500 ... 500 500 500]]\n",
+      "[[0. 1. 0. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -120,7 +127,8 @@
     "# Unseeded distance\n",
     "\n",
     "distance = urg.unseeded_distance(img_r, ne, regions)\n",
-    "print(distance)"
+    "print(distance[0])\n",
+    "print(distance[1])"
    ],
    "metadata": {
     "collapsed": false,
@@ -131,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -144,8 +152,28 @@
    "source": [
     "# z Aussuchen\n",
     "\n",
-    "picked_pixel = urg.unseeded_pixel_pick(distance)\n",
+    "picked_pixel = urg.unseeded_pixel_pick(distance[0])\n",
     "print(picked_pixel)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "t = 5 # Threshold ist willkürlich festgesetzt\n",
+    "# Regions Zuweisung z\n",
+    "# Distanz nochmal berechnen, zu Nachbarn mit region, und der gleichen Region zuweisen\n",
+    "\n",
+    "#test = urg.unseeded_region_direct(regions, picked_pixel, distance[1])\n",
+    "\n",
+    "#print(test)"
    ],
    "metadata": {
     "collapsed": false,
@@ -159,48 +187,14 @@
    "execution_count": 8,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 1. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = 5 # Threshold ist willkürlich festgesetzt\n",
-    "# Regions Zuweisung z\n",
-    "# Distanz nochmal berechnen, zu Nachbarn mit region, und der gleichen Region zuweisen\n",
-    "\n",
-    "test = urg.unseeded_region_direct(img_r, regions, picked_pixel)\n",
-    "\n",
-    "print(test)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
      "ename": "ValueError",
      "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-9-e7c80759450f>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;31m# Fehlermeldung hier ist okay, da Pixel wie oben zugeordnet wird\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 5\u001B[1;33m \u001B[0mtest3\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0murg\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0munseeded_region_indirect_or_new\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_r\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpicked_pixel\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdistance\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      6\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtest3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\PycharmProjects\\2021-topic-04-team-04\\Functions\\unseeded_region_growing.py\u001B[0m in \u001B[0;36munseeded_region_indirect_or_new\u001B[1;34m(img, reg, pick, t)\u001B[0m\n\u001B[0;32m     56\u001B[0m         \u001B[0mdis\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mabs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mpick\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mm\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# Alle Abstände zu den Regionen berechnen\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     57\u001B[0m     \u001B[0mminimum\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# Minimale Distanz\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 58\u001B[1;33m     \u001B[1;32mif\u001B[0m \u001B[0mminimum\u001B[0m \u001B[1;33m<\u001B[0m \u001B[0mt\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Distanz muss kleiner sein als der Threshold\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     59\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0md\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Für alle Distanz Werte wir überprüft\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     60\u001B[0m             \u001B[1;32mif\u001B[0m \u001B[0mdis\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0md\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mminimum\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Wenn die Distanz gleich dem Minimum ist\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-8-e7c80759450f>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;31m# Fehlermeldung hier ist okay, da Pixel wie oben zugeordnet wird\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 5\u001B[1;33m \u001B[0mtest3\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0murg\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0munseeded_region_indirect_or_new\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_r\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpicked_pixel\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdistance\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      6\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtest3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\PycharmProjects\\2021-topic-04-team-04\\Functions\\unseeded_region_growing.py\u001B[0m in \u001B[0;36munseeded_region_indirect_or_new\u001B[1;34m(img, reg, pick, t)\u001B[0m\n\u001B[0;32m     67\u001B[0m         \u001B[0mdistance_list\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mabs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mpick\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mm\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# Alle Abstände zu den Regionen berechnen\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     68\u001B[0m     \u001B[0mminimum\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdistance_list\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# Minimale Distanz\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 69\u001B[1;33m     \u001B[1;32mif\u001B[0m \u001B[0mminimum\u001B[0m \u001B[1;33m<\u001B[0m \u001B[0mt\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Distanz muss kleiner sein als der Threshold\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     70\u001B[0m         \u001B[0mreg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mpick\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdistance_list\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mindex\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mminimum\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;36m1\u001B[0m  \u001B[1;31m# Erste Region mit minimalem Wert\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     71\u001B[0m     \u001B[1;32melse\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Definition einer neuen Region, wenn keine passende gefunden wurde\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
       "\u001B[1;31mValueError\u001B[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
