reformating seeded region growing

--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -147,6 +147,8 @@
     "    distances = np.ones((img.shape[0],img.shape[1],5))\n",
     "    regions_with_border = np.zeros((img.shape[0]+2, img.shape[1]+2))\n",
     "    regions_with_border[1:img.shape[0]+1, 1:img.shape[1]+1] = reg\n",
+    "    neighboring_regions = np.zeros((img.shape[0],img.shape[1],4))\n",
+    "    #neighboring_regions[]\n",
     "    #distances[,1]\n",
     "    max_intensity = np.amax(img)\n",
     "    means = srg.mean_region(img, reg) # list of mean values of every region\n",
