--- a/Doodles/Dice_score.ipynb
+++ b/Doodles/Dice_score.ipynb
@@ -40,8 +40,7 @@
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "from Functions import image_processing as ip\n",
-    "from skimage import color\n",
-    "from skimage import io\n",
+    "\n",
     "\n",
     "gtimage = sk.imread(\"../Data/N2DH-GOWT1/gt/man_seg01.tif\")\n",
     "gt01 = np.ndarray.clip(gtimage,0, 1) # background is 0; regions are 1\n",
@@ -95,11 +94,11 @@
     }
    ],
    "source": [
-    "def imgclip (img, T1):\n",
+    "def imgclip (img, t1):\n",
     "    for i in range(0, img.shape[0]):\n",
     "        for j in range(0, img.shape[1]):\n",
     "            intens = img[i, j]\n",
-    "            if intens == T1:\n",
+    "            if intens == t1:\n",
     "                img[i, j] = 0\n",
     "            else:\n",
     "                img[i, j] = 1\n",
