region merging by size

--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -2782,12 +2782,38 @@
     "            if regions[neighbor] != region_number and regions[neighbor] not in neighboring_regions:\n",
     "                neighboring_regions.append(regions[neighbor])\n",
     "\n",
-    "def find_most_similar_region(regions, img, means, neighboring_regions):\n",
-    "    region_count = len(neighboring_regions)\n",
-    "    distances = np.ndarray(region_count)\n",
-    "    distances[0:region_count] =\n",
-    "\n",
-    "\n"
+    "def find_most_similar_region(regions, img, means, neighboring_regions, region_number):\n",
+    "    nei_regions_array = np.ndarray(neighboring_regions)\n",
+    "    means_array = np.ndarray(means)\n",
+    "    distances = np.ndarray(nei_regions_array.shape)\n",
+    "    distances[0:nei_regions_array.shape] = abs(means_array[nei_regions_array-1]-means_array[region_number-1])\n",
+    "    similar_region = np.amin(distances)\n",
+    "    return similar_region"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 5. 3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,5,3]\n",
+    "a = np.ndarray(len(l))\n",
+    "a[0:len(l)] = l\n",
+    "print(a)"
    ],
    "metadata": {
     "collapsed": false,
