--- a/Doodles/Unused_ideas_Marie.ipynb
+++ b/Doodles/Unused_ideas_Marie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,19 +14,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: MacOSX\n",
+      "Using matplotlib backend: Qt5Agg\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'functions' from 'Functions' (/Users/johannamoeller/PycharmProjects/2021-topic-04-team-04/Functions/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-3-9a0c60d117cf>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0mget_ipython\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrun_line_magic\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'matplotlib'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'inline'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 5\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mFunctions\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mfunctions\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mf\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      6\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mskimage\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mio\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0msk\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mImportError\u001B[0m: cannot import name 'functions' from 'Functions' (/Users/johannamoeller/PycharmProjects/2021-topic-04-team-04/Functions/__init__.py)"
      ]
     }
    ],
@@ -35,10 +24,34 @@
     "%pylab\n",
     "%matplotlib inline\n",
     "\n",
-    "from Functions import functions as f\n",
-    "import skimage.io as sk\n",
-    "\n"
+    "\n",
+    "import skimage.io as sk"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 5. 3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,5,3]\n",
+    "a = np.ndarray(len(l))\n",
+    "a[0:len(l)] = l\n",
+    "print(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
