--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -4285,7 +4285,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "outputs": [],
-   "source": [],
+   "source": [
+    "test"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
